styles.css
/* STYLES COMMUNS */
body {
  max-width: 1378px; /* taille max pour centrer le contenu sur les grands écrans */
  margin: 0 auto;

  font-family: 'Raleway', sans-serif;
}

a {
  color: #0065FC;
  text-decoration: none !important;
}

.h1 {
  font-weight: 700;
  font-size: 22px;
  margin-bottom: 8px;
}
/* STYLES COMMUNS */

/* HEADER */
.header {
  display: flex;
  align-items: flex-end;
}

.header__logo {
  flex: 1 0 auto;

  display: block;
  height: 45px;
  margin-left: 40px;
}

.header__logo > img {
  display: inline-block;
  height: 100%;
}

.header__nav {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}

.header__nav__list {
  display: flex;
  align-items: center;

  height: 100%;
}

.header__nav__list__item {
  flex: 1;
}

.header__nav__list-item > a {
  display: block;

  padding: 40px 40px 10px;
  line-height: 32px;

  color: #000;
  border-top: 2px solid transparent;
}

.header__nav__list-item > a:hover {
  color: #0065FC;
  border-color: #0065FC;
}
/* HEADER */

.content {
  margin-top: 45px;
  padding: 0 20px 60px 20px;
}

/* RECHERCHE */
.search-input {
  display: flex;
  align-items: stretch;

  margin-top: 16px;
  max-width: 420px;
}

.search-input__icon {
  flex: 0 0 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  height: 50px;

  font-size: 20px;
  border-radius: 15px 0 0 15px;
  background-color: #F2F2F2;

  cursor: pointer;
}

.search-input__text {
  flex: 1 1 100%;
  z-index: 0;
  position: relative;
  height: 50px;

  border: 1px solid #F2F2F2;
  border-radius: 0;
}

.search-input__text > input {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 22px;

  font-size: 18px;
  font-weight: 600;

  border: none;
}

.search-input__text > input::placeholder {
  font-size: 18px;
  font-weight: 600;
  font-family: 'Raleway', sans-serif;

  /* color: #000 !important; */
}

.search-input__button {
  z-index: 1;
  position: relative;
  display: block;
  padding: 0 16px;
  flex: 1 0 50px;

  font-size: 18px;
  font-weight: 600;

  color: #FFF;
  border: none;
  border-radius: 0 15px 15px 0;
  background-color: #0065FC;
  cursor: pointer;
}

.search-input__button__icon {
  display: none;
}
/* RECHERCHE */

/* FILTRES */
.filters {
  display: flex;
  align-items: flex-start;

  margin-top: 30px;
}

.filters__title {
  line-height: 50px;
  font-size: 18px;
  font-weight: 700;
}

.filters__list {
  display: flex;
  flex-wrap: wrap;
  margin: -5px -10px -5px 35px;
}

.filters__list__item {
  display: block;
  position: relative;
  margin: 5px 10px;
  padding: 0 20px 0 60px;

  font-size: 18px;
  font-weight: 700;
  line-height: 46px;
  white-space: nowrap;

  color: #000 !important;
  border: 2px solid #F2F2F2;
  border-radius: 25px;

  -webkit-tap-highlight-color: transparent;
}

.filters__list__item__icon {
  z-index: 0;
  position: absolute;
  top: -2px;
  left: -2px;
  width: 50px;
  height: 50px;
  font-size: 18px;
  text-align: center;
  background-color: #DEEBFF;
  border-radius: 25px;
  transition: width ease-out 150ms;
}

.filters__list__item:hover .filters__list__item__icon {
  width: calc(100% + 4px);
  right: -2px;
  transition-timing-function: ease-in;
}

.filters__list__item__icon > i {
  color: #0065FC;
  line-height: 50px;
  display: block;
  width: 50px;
  height: 50px;
}

.filters__list__item__text {
  z-index: 1;
  position: relative;
  display: inline-block;
}

.hint {
  display: inline-flex;
}

.hint > i {
  flex: 0 0 24px;
  display: inline-block;
  width: 24px;
  height: 24px;
  font-size: 12px;
  color: #0065FC;
  line-height: 24px;
  text-align: center;
  border: 1px solid #F2F2F2;
  border-radius: 50%;
}

.hint > p {
  flex: 1;
  display: inline-block;
  padding-left: 12px;
  line-height: 24px;
}

.filters + .hint {
  margin-top: 35px;
}
/* FILTRES */

/* HOTELS LIST */
.cards-group {
  display: flex;
  margin: 25px -20px -20px -20px;
}

.cards-group__item {
  margin: 20px;
  padding: 45px 30px 30px;
  background-color: #F2F2F2;
  border-radius: 24px;
}

.cards-group__item__title {
  font-size: 22px;
  font-weight: 700;
}

.cards-list {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: flex-start;

  margin: -12px;
  margin-top: 8px;
}

.cards-list__item {
  flex: 1 0 250px;
  display: block;
  margin: 12px;
}

.cards-list__item__wrapper {
  display: block;
  overflow: hidden;
  padding: 4px 4px 0;
  color: inherit !important;
  background-color: #FFF;
  border-radius: 24px;

  /* https://codepen.io/sdthornton/pen/wBZdXq */
  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.cards-list__item__wrapper:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.cards-list__item__cover {
  display: block;
  overflow: hidden;
  height: 112px;
  line-height: 0;
  border-radius: 20px 20px 0 0;
}

.cards-list__item__cover > img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.cards-list__item__content {
  padding: 6px 12px;
  line-height: 1.2;
}

.cards-list__item__title {
  font-weight: 700;
  font-size: 18px;
}

.cards-list__item__description,
.cards-list__item__stars {
  display: block;
  margin-top: 0.5em;
  font-size: 14px;
}

.cards-list__item__description > strong {
  font-weight: 400;
}

.cards-list__item__description > strong > span {
  font-weight: 700 !important;
}

.cards-list__item__stars {
  position: relative;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  line-height: 22px;
  visibility: hidden;
}

.cards-list__item__stars::before {
  position: absolute;
  top: 0;
  left: 0;
  visibility: visible;
  color: #D6D6D6;
  content: "\f005\f005\f005\f005\f005";
}

.cards-list__item__stars::after {
  position: absolute;
  top: 0;
  left: 0;
  visibility: visible;
  color: #0065FC;
}

.cards-list__item__stars[data-stars="1"]::after {
  content: "\f005";
}
.cards-list__item__stars[data-stars="2"]::after {
  content: "\f005\f005";
}
.cards-list__item__stars[data-stars="3"]::after {
  content: "\f005\f005\f005";
}
.cards-list__item__stars[data-stars="4"]::after {
  content: "\f005\f005\f005\f005";
}
.cards-list__item__stars[data-stars="5"]::after {
  content: "\f005\f005\f005\f005\f005";
}

.cards-list__item--paysage {
  flex: 1 0 360px;
}

.cards-list__item--paysage .cards-list__item__wrapper {
  padding: 4px;
}

.cards-list__item--paysage .cards-list__item__container {
  display: flex;
}

.cards-list__item--paysage .cards-list__item__content {
  display: flex;
  flex-direction: column;
  padding: 6px 16px;
}

.cards-list__item--paysage .cards-list__item__cover {
  flex: 0 0 136px;
  min-height: 112px;
  border-radius: 20px 0 0 20px;
}

.cards-list__item--paysage .cards-list__item__description {
  margin-bottom: 0.5em;
}

.cards-list__item--paysage .cards-list__item__stars {
  margin-top: auto;
}

#hebergements {
  flex: 1 0 420px;
}

#populaires {
  flex: 0 0 420px;
}
/* HOTELS LIST */

@media (max-width: 991.98px) {
  .cards-group {
    margin: 45px 0 0 0;
    flex-direction: column;
  }

  .cards-group__item {
    padding: 30px 20px;
    margin: 0 -20px;
  }

  #hebergements {
    flex: 1;
    order: 2;
    background-color: transparent;
  }

  #populaires {
    flex: 1;
    order: 1;
    border-radius: 0;
  }
}

@media (max-width: 767.98px) {
  body {
    padding-top: 24px;
  }

  .header {
    /* changed */
    align-items: center;

    /* added */
    flex-direction: column;
  }

  .header__logo {
    height: 50px;
    margin-left: 0;
  }


  .header__nav {
    justify-content: center;

    margin-top: 24px;
    align-self: stretch;
  }

  .header__nav__list {
    flex: 1;
  }

  .header__nav__list-item {
    flex: 1;
  }

  .header__nav__list-item > a {
    line-height: 1;
    padding: 12px 0;
    border-top: none;
    border-bottom: 2px solid #F2F2F2;

    text-align: center;
  }

  .content {
    margin-top: 24px;
  }

  .search-input {
    margin-top: 32px;
    max-width: 100%;
  }

  .search-input__text > input {
    padding-right: 37px;
  }

  .search-input__button {
    margin-left: -15px;
    border-radius: 15px;
  }

  .search-input__button__text {
    display: none;
  }

  .search-input__button__icon {
    display: inline-block;
  }

  .filters {
    flex-direction: column;
    align-items: flex-start;
  }

  .filters__list {
    margin-left: -10px;

    margin-top: 12px;
  }

  .filters__title {
    line-height: normal;
  }

  .cards-list__item--paysage {
    flex: 0 0 calc(100% - 24px);
    flex-direction: column;
    flex-wrap: nowrap;
  }

}

